Thu Jan  7 21:23:46 1999  Aaron M. Renn  <arenn@urbanophile.com>

	* gnu/testlet/java/lang/Character/UnicodeData.txt: Added Unicode
	2.1.2 database file needed for character test.

	* gnu/testlet/java/lang/Character/unicode.java: Added Artur
	Biesiadowski's (abies@pg.dga.pl) Character test to the archives.

Mon Jan  4 18:58:11 1999  Aaron M. Renn  <arenn@urbanophile.com>

	* gnu/testlet/java/text/DateFormatSymbols/Test.java: Added this
	test case.

1999-01-04  Tom Tromey  <tromey@cygnus.com>

	* gnu/testlet/java/io/ByteArrayInputStream/MarkReset.java (test):
	Commented out print to System.out.

	* gnu/testlet/java/io/PushbackInputStream/Unread.java (test): Use
	`debug' instead of printing string to System.out.

	* gnu/testlet/java/io/BufferedCharWriter/Test.java (test): Added
	checkpoint name to exception check.

	* gnu/testlet/SimpleTestHarness.java (main): Removed extraneous
	`continue' statements.  Only print class name and separator if
	`verbose'.

	* gnu/testlet/SimpleTestHarness.java (main): Removed `~' test of
	file names.

Wed Dec 30 10:07:55 1998  Anthony Green  <green@cygnus.com>

	* gnu/testlet/TestHarness.java: getSourceDirectory returns
	a String, not a File.
	* gnu/testlet/SimpleTestHarness.java: srcdir is a String, not
	a File.

	* gnu/testlet/java/io/PipedStream/Test.java: Uses
	PipedStreamTestWriter.
	* gnu/testlet/java/io/PipedReaderWriter/Test.java: Uses
	PipedTestWriter.
	* gnu/testlet/java/io/PipedReaderWriter/PipedTestWriter.java,
	gnu/testlet/java/io/PipedStream/PipedStreamTestWriter.java:
	New files.
	
Sat Dec 26 20:35:02 1998  Aaron M. Renn  <arenn@urbanophile.com>

	* gnu/testlet/java/io/BufferedReader/MarkReset.java: Added this
	test case.

	* gnu/testlet/java/io/BufferedReader/SimpleRead.java: Added this
	test case.

Sat Dec 26 20:02:33 1998  Aaron M. Renn  <arenn@urbanophile.com>

	* gnu/testlet/java/io/BufferedInputStream/MarkReset.java: Added
	this test case.

	* gnu/testlet/java/io/BufferedInputStream/SimpleRead.java: Added