@@ -1,0 +1,17 @@
+// Tags: not-a-test
+
+// This is sad, but we need this class in its own file because gcj
+// currently doesn't support inner classes.
+
+package gnu.testlet.java.lang.Character;
+
+public class CharInfo
+{
+  public String name;
+  public String category;
+  public int digit;
+  public int numericValue;
+  public char uppercase;
+  public char lowercase;
+  public char titlecase;
+}
